example/security/00-peerauthentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: "example-workload-policy"
  namespace: "foo"
spec:
  selector:   # Disable mTLS on port 80 for workloads with label app=example-app
     matchLabels:
       app: example-app
  portLevelMtls:
    80:
      mode: DISABLE
